# analytics-arxiv-2511-17083

./: README.md  pyproject.toml
notebooks/: example_excitation_spectrum.ipynb
src/analytics_arxiv_2511_17083/: __init__.py  expressions.py  load.py
src/analytics_arxiv_2511_17083/resources/: mathematica_density_matrix_eeee.txt  mathematica_density_matrix_egeg.txt  mathematica_density_matrix_geeg.txt  mathematica_density_matrix_gggg.txt  mathematica_density_matrix_im_egee.txt  mathematica_density_matrix_im_ggee.txt  mathematica_density_matrix_im_ggeg.txt  mathematica_density_matrix_re_egee.txt  mathematica_density_matrix_re_ggee.txt  mathematica_density_matrix_re_ggeg.txt  sympy_density_matrix_eeee.txt  sympy_density_matrix_egeg.txt  sympy_density_matrix_geeg.txt  sympy_density_matrix_gggg.txt  sympy_density_matrix_im_egee.txt  sympy_density_matrix_im_ggee.txt  sympy_density_matrix_im_ggeg.txt  sympy_density_matrix_re_egee.txt  sympy_density_matrix_re_ggee.txt  sympy_density_matrix_re_ggeg.txt
